# LogPeek

./: .gitignore  .npmrc  CHANGELOG.md  README.md  README_ZH.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: dev-workflow.md  technical-design.md
openspec/: project.md
openspec/changes/add-backend-unit-tests/: proposal.md  tasks.md
openspec/changes/add-backend-unit-tests/specs/backend-testing/: spec.md
openspec/changes/add-encoding-support/: design.md  tasks.md
openspec/changes/add-frontend-lint-tooling/: proposal.md  tasks.md
openspec/changes/add-global-file-search/: design.md  proposal.md  security.md  tasks.md
openspec/changes/add-global-file-search/specs/file-search/: spec.md
openspec/changes/add-zip-log-monitoring/: design.md  proposal.md  tasks.md
openspec/changes/add-zip-log-monitoring/specs/archive-reading/: spec.md
openspec/changes/add-zip-log-monitoring/specs/directory-monitoring/: spec.md
openspec/changes/add-zip-log-monitoring/specs/log-notification/: spec.md
openspec/changes/add-zip-log-monitoring/specs/log-viewing/: spec.md
openspec/changes/archive/2026-07-17-add-backend-unit-tests/: tasks.md
openspec/changes/archive/2026-07-17-add-encoding-support/: proposal.md  tasks.md
openspec/changes/archive/2026-07-17-add-encoding-support/specs/log-viewing/: spec.md
openspec/changes/archive/2026-07-17-add-index-progress-events/: proposal.md  tasks.md
openspec/changes/archive/2026-07-17-add-index-progress-events/specs/log-viewing/: spec.md
openspec/changes/archive/2026-07-17-add-realtime-directory-sync/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-17-add-realtime-directory-sync/specs/directory-monitoring/: spec.md
openspec/changes/archive/2026-07-20-migrate-github-repository-to-logcrate/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-20-migrate-github-repository-to-logcrate/specs/application-branding/: spec.md
openspec/changes/archive/2026-07-20-migrate-github-repository-to-logcrate/specs/application-updating/: spec.md
openspec/changes/archive/2026-07-21-add-workspace-restoration/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-21-add-workspace-restoration/specs/directory-monitoring/: spec.md
openspec/changes/archive/2026-07-21-add-workspace-restoration/specs/log-workspace/: spec.md
openspec/changes/archive/2026-07-22-add-startup-loading-indicator/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-22-add-startup-loading-indicator/specs/application-lifecycle/: spec.md
openspec/changes/archive/2026-07-23-add-global-file-search/: tasks.md
openspec/changes/archive/2026-07-24-keep-search-view-alive/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-24-keep-search-view-alive/specs/application-lifecycle/: spec.md
openspec/changes/optimize-startup-time/: benchmark.md  design.md  proposal.md  tasks.md
openspec/changes/optimize-startup-time/specs/application-lifecycle/: spec.md
openspec/changes/refactor-zip-streaming-read/: design.md  proposal.md  tasks.md
openspec/changes/refactor-zip-streaming-read/specs/archive-reading/: spec.md
openspec/changes/remove-logpeek-compatibility/: proposal.md  tasks.md
openspec/changes/remove-logpeek-compatibility/specs/application-branding/: spec.md
openspec/changes/remove-logpeek-compatibility/specs/application-updating/: spec.md
openspec/specs/application-branding/: spec.md
openspec/specs/application-lifecycle/: spec.md
openspec/specs/application-updating/: spec.md
openspec/specs/directory-monitoring/: spec.md
openspec/specs/file-search/: spec.md
openspec/specs/log-viewing/: spec.md
openspec/specs/log-workspace/: spec.md
openspec/specs/macos-file-access/: spec.md
resources/licenses/: orange-gplv3.md
scripts/: brand-check.mjs  release-notes.mjs  startup-benchmark.mjs
src/: App.tsx  main.tsx  startup.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: index.rs  lib.rs  main.rs  search.rs  search_index.rs  startup.rs  startup_trace.rs  watcher.rs
src-tauri/src/archive/: mod.rs  plain.rs  rar_reader.rs  zip_reader.rs
src-tauri/src/ntfs/: ipc.rs  mod.rs  volume.rs
src-tauri/windows/: index-service.wxs  nsis-hooks.nsh
src/api/: index.ts  mock.ts  tauri.ts  types.ts
src/components/: ContextMenu.tsx  DirTree.tsx  EmptyState.tsx  EntryList.tsx  FileSearchKeepAlive.test.tsx  FileSearchPanel.test.tsx  FileSearchPanel.tsx  LogContent.tsx  LogRow.tsx  SuffixFilter.tsx  TopBar.tsx
src/i18n/: core.ts  messages.ts
src/util/: directoryTree.test.ts  directoryTree.ts  fileSearch.test.ts  fileSearch.ts  format.ts  i18n.test.ts  indexProgress.test.ts  indexProgress.ts  logTabs.ts  macOsFileAccess.ts  startup.test.ts  update.test.ts  update.ts  workspace.test.ts  workspace.ts
(+1 files in other folders)
