[package]
name = "logpeek"
# 应用版本的唯一人工维护来源；Tauri 配置省略 version 后会自动读取此值。
version = "1.0.8"
description = "免解压跨平台桌面日志阅读器"
authors = ["LogCrate"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "logpeek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
notify = "6"
notify-debouncer-full = "0.3"
encoding_rs = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
anyhow = "1"
thiserror = "1"
trash = "5"

[features]
# 由 tauri CLI 在构建时按需启用
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"
