[package]
name = "logpeek"
# 应用版本的唯一人工维护来源；Tauri 配置省略 version 后会自动读取此值。
version = "1.0.10"
description = "免解压跨平台桌面日志阅读器"
authors = ["LogCrate"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "logpeek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.3.1"
softbuffer = { version = "0.4.8", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4.41"
flate2 = "1.0.30"
bzip2 = "0.4.4"
xz2 = "0.1.7"
zstd = "0.13.1"
sevenz-rust = { version = "0.6.1", default-features = false, features = ["bzip2", "zstd"] }
unrar_sys = "0.5.8"
widestring = "1"
notify = "6"
notify-debouncer-full = "0.3"
encoding_rs = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
anyhow = "1"
thiserror = "1"
trash = "5"

[features]
# 由 tauri CLI 在构建时按需启用
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"
